--- a/miniprogram/pages/home/index.wxss
+++ b/miniprogram/pages/home/index.wxss
@@ -97,9 +97,9 @@
 }
 
 .hero-arrow {
-  width: 32rpx;
-  height: 32rpx;
+  font-size: 32rpx;
   margin-left: 16rpx;
+  display: inline;
 }
 
 .hero-visual {
