fix: 修复generator页面WXML模板语法错误
- 将复杂数组方法调用改为函数调用
- 添加getSelectedCategoryName方法
- 确保微信小程序模板语法兼容性

--- a/miniprogram/pages/generator/index.wxml
+++ b/miniprogram/pages/generator/index.wxml
@@ -43,7 +43,7 @@
     ></textarea>
 
     <view class="selected-category">
-      <text>已选择：{{categories.find(item => item.id === selectedCategory).name}}</text>
+      <text>已选择：{{getSelectedCategoryName()}}</text>
     </view>
 
     <button class="generate-btn" bindtap="generateIdea">生成小事方案</button>
