--- a/miniprogram/pages/home/index.wxss
+++ b/miniprogram/pages/home/index.wxss
@@ -4,6 +4,20 @@
   background-color: #f8fafc;
 }
 
+/* 统一板块标题样式 */
+.section {
+  margin-bottom: 48rpx;
+}
+
+.section-title {
+  font-size: 36rpx;
+  font-weight: 700;
+  color: #1a365d;
+  margin-bottom: 24rpx;
+  text-align: left;
+  padding: 0 32rpx;
+}
+
 /* 板块1: Banner区域 */
 .banner-section {
   position: relative;
@@ -43,25 +57,19 @@
 
 /* 板块2: 介绍区域 */
 .intro-section {
-  padding: 64rpx 0;
+  padding: 32rpx 0;
   background-color: white;
 }
 
-.intro-header {
-  text-align: center;
-  margin-bottom: 64rpx;
-}
-
-.intro-title {
-  font-size: 48rpx;
-  font-weight: 700;
-  color: #1a365d;
-  margin-bottom: 16rpx;
+.intro-content {
+  text-align: left;
+  margin-bottom: 48rpx;
 }
 
 .intro-subtitle {
   font-size: 28rpx;
   color: #64748b;
+  margin-bottom: 48rpx;
 }
 
 .feature-buttons {
@@ -106,7 +114,6 @@
 
 /* 板块3: 小事行动墙 */
 .wall-section {
-  padding: 32rpx 0;
   background-color: #f8fafc;
 }
 
