style: 添加标签间距 - 使用flex gap
- 为card-tags添加 gap: 8rpx
- 标签之间有统一的8rpx间距
- 优化标签布局的视觉效果

--- a/miniprogram/pages/home/index.wxss
+++ b/miniprogram/pages/home/index.wxss
@@ -213,7 +213,7 @@
 .card-tags {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  gap: 8rpx;
 }
 
 .tag {
@@ -222,8 +222,8 @@
   padding: 6rpx 12rpx;
   font-size: 20rpx;
   font-weight: 500;
-  line-height: 1;
   display: inline-block;
+  vertical-align: baseline;
 }
 
 /* 响应式设计 */
