--- a/miniprogram/pages/home/index.wxss
+++ b/miniprogram/pages/home/index.wxss
@@ -133,18 +133,8 @@
   background-color: #f8fafc;
 }
 
-.filter-group {
-  margin-bottom: 24rpx;
-}
-
-.filter-label {
-  font-size: 26rpx;
-  font-weight: 600;
-  color: #068D7B;
-  margin-bottom: 12rpx;
-  display: block;
-  border-bottom: 2rpx solid #FFE501;
-  padding-bottom: 8rpx;
+.filter-row {
+  margin-bottom: 16rpx;
 }
 
 .filter-options {
@@ -154,17 +144,18 @@
 
 .filter-option {
   display: inline-block;
-  padding: 12rpx 20rpx;
-  margin-right: 12rpx;
-  background-color: white;
+  padding: 10rpx 16rpx;
+  margin-right: 8rpx;
+  background-color: #f5f5f5;
   font-size: 24rpx;
-  color: #64748b;
+  color: #666666;
+  border-radius: 4rpx;
   transition: all 0.2s ease;
 }
 
 .filter-option.active {
-  background-color: #068D7B;
-  color: #ffffff;
+  background-color: #e0e0e0;
+  color: #333333;
   font-weight: 600;
 }
 
